# s7_clibgen

./: .bazelrc  .gitignore  MODULE.bazel  README.adoc  README.md
src/: BUILD.bazel  RULES.bzl  clibgen.c  clibtest_config.c
test/: BUILD.bazel
